# LinuxApplicationDevelopment2023

01_TerminalProject/: Makefile  Show.c
02_Multifile/: Makefile
03_Text/: randomize.sh
04_Debugging/: Makefile  range.c  script1  script2
05_Regexps/: Makefile  esub.c
06_TracingFencing/: Makefile  move.c  remove.c
07_Environmental/: Makefile.am  configure.ac  test_md5.sh  test_sha1.sh
07_Environmental/src/: rhasher.c
